deployment/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: calculator-deployment
spec:
  selector:
    matchLabels:
      app: calculator
  replicas: 1
  template:
    metadata:
      labels:
        app: calculator
    spec:
      containers:
      - name: backend
        image: public.ecr.aws/w7k7i5l2/backend
        ports: 
        - containerPort: 8080
      - name: frontend
        image: public.ecr.aws/w7k7i5l2/frontend
        ports: 
        - containerPort: 3000
