deployment/service.yml
apiVersion: v1
kind: Service
metadata:
  name: calculator-service
  annotations:
    service.beta.kubernetes.io/aws-load-balancer-type: alb
spec:
  type: LoadBalancer
  selector:
    app.kubernetes.io/name: calculator
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
